tdf#105650 different strikethrough offset for vertical writing.

Change-Id: I7f1a8753bb00972865625628baeff76ff5dc4699
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115015
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>